Add image preview and notification

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -33,5 +33,14 @@
   "@contactUs": {},
 
   "chooseLanguge": "اختار اللغة",
-  "@chooseLanguge": {}
+  "@chooseLanguge": {},
+
+  "booksCategories": "أصناف الـكــتـــب",
+  "@booksCategories": {},
+
+  "activitiesCategories": "أصناف الأنشطة",
+  "@activitiesCategories": {},
+
+  "moviesCategories": "أصناف الأفلام",
+  "@moviesCategories": {}
 }
