--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -20,7 +20,7 @@
   "sheperdVoiceTitle": "صــــوت  الـــراعي",
   "@sheperdVoiceTitle": {},
 
-  "changeLanguage": "تغيير اللغة",
+  "changeLanguage": "Change Language",
   "@changeLanguage": {},
 
   "cancel": "الغاء",
