--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -20,7 +20,7 @@
   "sheperdVoiceTitle": "صــــوت  الـــراعي",
   "@sheperdVoiceTitle": {},
 
-  "changeLanguage": "Changer de langue",
+  "changeLanguage": "Change Language",
   "@changeLanguage": {},
 
   "cancel": "Annuler",
